--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 z-index:3;
             }
             a:-webkit-any-link:not(.icon):not(.Involvements) {
-                color: inherit !important;
-                text-decoration: none !important;
+                color: inherit;
+                text-decoration: none;
                 display: inherit;
             }
             .LinksMenu {
@@ -311,8 +311,8 @@
                 font-family: 'Gill Sans MT', sans-serif;
                 color: black;
                 padding-left: 6px;
-                padding-top:2px;
-                font-size: 1.33rem;
+                padding-top:-1px;
+                font-size: 1.4rem;
                 line-height:0.8;
                 margins: 0px;
             }
@@ -467,7 +467,7 @@
                       </li>
                     </ul>
                     <p>Socials</p>
-                    <ul style = "font-size: 1rem; display: inline;">
+                    <ul style = "font-size: 1rem">
                         <li>Facebook</li>
                         <li>Instagram</li>
                     </ul>
