--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
                 font-size: 1.4rem;
                 line-height:0.8;
                 margins: 0px;
+                display: inline;
             }
             .Involvements p a, .Involvements ul a {
                 color: blue !important;
@@ -468,8 +469,8 @@
                     </ul>
                     <p>Socials</p>
                     <ul style = "font-size: 1rem">
-                        <li>Facebook</li>
-                        <li>Instagram</li>
+                        <li><a href="https://www.facebook.com/groups/334285765697491/" style = "display:inline;">Facebook</a></li>
+                        <li><a href ="https://www.instagram.com/eac_shs/" style = "display:inline;">Instagram</a></li>
                     </ul>
                 </section>
                 <div class = "TransparencyGradients"></div>
