--- a/index.html
+++ b/index.html
@@ -318,8 +318,9 @@
                 display: inline;
             }
             .Involvements p a, .Involvements ul a {
-                color: blue !important;
+                color: #0097a7 !important;
                 text-decoration: underline !important;
+                display: inline !important;
             }
             .TransparencyGradients{
                 background: rgb(0,0,0);
