--- a/index.html
+++ b/index.html
@@ -314,13 +314,11 @@
                 padding-top:-1px;
                 font-size: 1.4rem;
                 line-height:0.9;
-                margins: 0px;
-                display: inline;
             }
             .Involvements p a, .Involvements ul a {
                 color: #0097a7 !important;
                 text-decoration: underline !important;
-                display: inline !important;
+                margin:0;
             }
             .TransparencyGradients{
                 background: rgb(0,0,0);
