--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
                 color: #0097a7 !important;
                 text-decoration: underline !important;
                 margin:0;
+                padding:0;
             }
             .TransparencyGradients{
                 background: rgb(0,0,0);
