--- a/index.html
+++ b/index.html
@@ -317,8 +317,11 @@
             .Involvements p a, .Involvements ul a {
                 color: #0097a7 !important;
                 text-decoration: underline !important;
-                margin:0;
-                padding:0;
+            }
+            .Involvements p, .Involvements ul, .Involvements li {
+                margin:0 !important;
+                padding:0 !important;
+                display:inline-block !important;
             }
             .TransparencyGradients{
                 background: rgb(0,0,0);
