--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
                 top: -8px;
                 left: -8px;
                 overflow-x: hidden;
+                padding: 0;
             }    
             .logoBox{
                 width: 7.2vw;
