--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                 overflow-y: hidden;
                 overflow-x: hidden;
                 font-size: 100%;
+                margin: 0;
             }    
             .icon {
                 color: #F5F5EF !important;
@@ -280,7 +281,7 @@
             .TransparentBoxes{
                 background-color:rgba(200,200,200,0.1);
                 color: #fff;
-                height: 38.5vh;
+                height: 706;
                 width: 21vw;
                 position: relative;
                 margin-top: 0.1%;
@@ -302,15 +303,14 @@
             .Involvements {
                 top: 13px;
                 height:93%;
-                width:calc(21vw-26px);
-                left:13px;
+                width:19vw;
+                left:1vw;
                 position:absolute;
                 text-align:left;
                 z-index:3;
                 background-color: #f7fff6ff; 
                 font-family: 'Gill Sans MT', sans-serif;
                 color: black;
-                padding-left: 6px;
                 padding-top:-1px;
                 font-size: 1.4rem;
                 line-height:0.9;
@@ -322,6 +322,7 @@
             .Involvements p, .Involvements ul, .Involvements li {
                 margin:0 !important;
                 padding:0 !important;
+                padding-left: 6px;
             }
             .TransparencyGradients{
                 background: rgb(0,0,0);
