--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                 font-family: 'Gill Sans MT', sans-serif;
                 color: black;
                 padding-top:-1px;
-                font-size: 1.4rem;
+                font-size: 1.7rem;
                 line-height:0.9;
             }
             .Involvements p a, .Involvements ul a {
@@ -320,9 +320,8 @@
                 text-decoration: underline !important;
             }
             .Involvements p, .Involvements ul, .Involvements li {
-                margin:0 !important;
-                padding:0 !important;
-                padding-left: 6px;
+                margin:24px !important;
+                padding-left: 5px;
             }
             .TransparencyGradients{
                 background: rgb(0,0,0);
@@ -467,7 +466,7 @@
                     <ul style = "font-size: 1rem;">
                       <li>
                         Email us at:
-                        Saratoga.eac@gmail.com
+                        saratoga.eac@gmail.com
                       </li>
                     </ul>
                     <p>Socials</p>
