--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
             .TransparentBoxes{
                 background-color:rgba(200,200,200,0.1);
                 color: #fff;
-                height: 706;
+                height: 706px;
                 width: 21vw;
                 position: relative;
                 margin-top: 0.1%;
