--- a/index.html
+++ b/index.html
@@ -301,8 +301,8 @@
                 left:-11.7%;
             }
             .Involvements {
-                top: 13px;
-                height:98%;
+                top: 21px;
+                height:93%;
                 width:16.8vw;
                 left:1vw;
                 position:absolute;
@@ -337,7 +337,7 @@
             .MiniFooter{
                 top:86%;
                 height:14%;
-                width:calc(21vw-26px);
+                width:16.8vw;
                 left:1vw;
                 position:absolute;
                 text-align:center;
