--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 position: relative;
                 font-size: clamp(2.17rem, 2.9vw, 8.4rem);
                 font-family: Montserrat;
-                font-weight: bold;
+                font-weight: 400;
                 text-align: center;
                 clear:both;
                 width:100vw;
@@ -281,8 +281,8 @@
             .TransparentBoxes{
                 background-color:rgba(200,200,200,0.1);
                 color: #fff;
-                height: 606px;
-                width: 21vw;
+                height: 600px;
+                width: 24vw;
                 position: relative;
                 margin-top: 0.1%;
                 margin-bottom: 1.1%;
@@ -303,8 +303,8 @@
             .Involvements {
                 top: 21px;
                 height:93%;
-                width:16.8vw;
-                left:1vw;
+                width:19.3vw;
+                left:1.5vw;
                 position:absolute;
                 text-align:left;
                 z-index:3;
@@ -312,7 +312,6 @@
                 font-family: 'Gill Sans MT', sans-serif;
                 color: black;
                 padding-top:-1px;
-                font-size: 2.1rem;
                 line-height:0.9;
             }
             .Involvements p a, .Involvements ul a {
@@ -323,22 +322,28 @@
                 margin:24px !important;
                 padding-left: 5px;
             }
+            .Involvements p {
+                font-size: 2.5rem;
+            }
+            .Involvements ul {
+                font-size: 1.88rem;
+            }
             .TransparencyGradients{
                 background: rgb(0,0,0);
                 background: linear-gradient(0deg, rgba(0,0,0,0.21) 7%, rgba(0,0,0,0.14) 31%, rgba(255,255,255,0) 84%);
-                height:6vh;
+                height:12%;
                 width:calc(21vw-26px);
                 position:absolute;
                 left:1vw;
                 text-align: center;
                 z-index: 4;
-                top: 71%;
+                top: 74%;
             }
             .MiniFooter{
                 top:86%;
-                height:14%;
-                width:16.8vw;
-                left:1vw;
+                height:10%;
+                width:19.3vw;
+                left:1.5vw;
                 position:absolute;
                 text-align:center;
                 z-index:5;
@@ -438,16 +443,16 @@
             <div class = "TransparentBoxes box1">
                 <section class = "Involvements">
                     <p>Our Webinars</p>
-                        <ul style = "font-size: 1rem;">
+                        <ul>
                           <li>Experts are invited</li>
                           <li>Occurs every semester</li>
                         </ul>
                     <p>Monthly Workshops</p>
-                        <ul style = "font-size: 1rem;">
+                        <ul>
                           <li>Learn environmental advocacy</li>
                         </ul>
                     <p>Regular Meetings</p>
-                        <ul style = "font-size: 1rem;">
+                        <ul>
                           <li>Tutorial updates held up to twice a week</li>
                         </ul>
                 </section>
@@ -459,18 +464,18 @@
                     <p>
                     Visit our <a href="https://linktr.ee/environmental_action_club" style="display: inline;">linktree</a>
                     </p>
-                    <ul style = "font-size: 1rem;">
+                    <ul>
                       <li>Or <a href="https://forms.gle/LAVz8fkzZSBbcyMC8" style="display: inline;">sign up directly</a></li>
                     </ul>
                     <p>Questions</p>
-                    <ul style = "font-size: 1rem;">
+                    <ul>
                       <li>
                         Email us at:
                         saratoga.eac@gmail.com
                       </li>
                     </ul>
                     <p>Socials</p>
-                    <ul style = "font-size: 1rem">
+                    <ul>
                         <li><a href="https://www.facebook.com/groups/334285765697491/" style = "display:inline;">Facebook</a></li>
                         <li><a href ="https://www.instagram.com/eac_shs/" style = "display:inline;">Instagram</a></li>
                     </ul>
@@ -481,15 +486,15 @@
             <div class = "TransparentBoxes box3">
                 <section class = "Involvements">
                     <p>Holiday Outings</p>
-                    <ul style = "font-size: 1rem;">
+                    <ul>
                       <li>Optional birdwatching and hiking</li>
                     </ul>
                     <p>Fundraising</p>
-                    <ul style = "font-size: 1rem;">
+                    <ul>
                       <li>Website funding</li>
                     </ul>
                     <p>Public Comments</p>
-                    <ul style = "font-size: 1rem;">
+                    <ul>
                       <li>Attend city council meetings</li>
                     </ul>
                 </section>
