--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
                 left:-11.7%;
             }
             .Involvements {
-                top: 21px;
-                height:93%;
-                width:19.3vw;
+                top: 34px;
+                height:88.2%;
+                width:15.8vw;
                 left:1.5vw;
                 position:absolute;
                 text-align:left;
@@ -331,18 +331,19 @@
             .TransparencyGradients{
                 background: rgb(0,0,0);
                 background: linear-gradient(0deg, rgba(0,0,0,0.21) 7%, rgba(0,0,0,0.14) 31%, rgba(255,255,255,0) 84%);
-                height:12%;
-                width:calc(21vw-26px);
+                opacity: 0.7;
+                height:17%;
+                top: 69%;
+                width:15.8vw;
                 position:absolute;
-                left:1vw;
+                left:1.5vw;
                 text-align: center;
                 z-index: 4;
-                top: 74%;
             }
             .MiniFooter{
-                top:86%;
+                top:83.4%;
                 height:10%;
-                width:19.3vw;
+                width:15.8vw;
                 left:1.5vw;
                 position:absolute;
                 text-align:center;
