--- a/index.html
+++ b/index.html
@@ -323,10 +323,10 @@
                 padding-left: 5px;
             }
             .Involvements p {
-                font-size: 2.5rem;
+                font-size: 40px;
             }
             .Involvements ul {
-                font-size: 1.88rem;
+                font-size: 30px;
             }
             .TransparencyGradients{
                 background: rgb(0,0,0);
