--- a/index.html
+++ b/index.html
@@ -375,6 +375,7 @@
                 }
                 .TransparentBoxes{
                     width:90%;
+                    height: 250px;
                     left:1px;
                     float:left;
                     clear:both;
@@ -382,14 +383,23 @@
                     margin-bottom:8px;
                 }
                 .TransparencyGradients{
-                    rotate: 90deg;
-                    top:0%;
-                    left:8%;
-                    height:5vh;
+                    display:none;
+                }
+                .MiniFooter{
+                    top:83.8%;
+                    width:80%;
+                    left:1.5vw;
+                    height:10%;
                 }
                 .Involvements{
                     width:80%;
                     left:5%;
+                }
+                .Involvements p {
+                    font-size: 20px;
+                }
+                .Involvements ul {
+                    font-size: 15px;
                 }
             }
         </style>
