--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                 top: 2.6%;
             }
             .TransparentBoxes{
-                background-color:rgba(200,200,200,0.1);
+                background-color:rgba(220,220,220,0.2);
                 color: #fff;
                 height: 600px;
                 width: 24vw;
@@ -374,12 +374,11 @@
                     top: 20px;
                 }
                 .TransparentBoxes{
-                    width:90%;
+                    width:80%;
                     height: 250px;
-                    left:1px;
                     float:left;
                     clear:both;
-                    margins: 0%;
+                    margin-left: 10%;
                     margin-bottom:8px;
                 }
                 .TransparencyGradients{
@@ -388,18 +387,20 @@
                 .MiniFooter{
                     top:83.8%;
                     width:80%;
-                    left:1.5vw;
+                    left:1vw;
                     height:10%;
                 }
                 .Involvements{
                     width:80%;
-                    left:5%;
+                    left:1vw;
+                    top:1vw;
+                    height:73.8%;
                 }
                 .Involvements p {
-                    font-size: 20px;
+                    font-size: 12px;
                 }
                 .Involvements ul {
-                    font-size: 15px;
+                    font-size: 9px;
                 }
             }
         </style>
