--- a/index.html
+++ b/index.html
@@ -385,15 +385,15 @@
                     display:none;
                 }
                 .MiniFooter{
-                    top:83.8%;
+                    top:calc(73.8%+20px);
+                    left:20px;
+                    height:26.2%;
                     width:80%;
-                    left:1vw;
-                    height:10%;
                 }
                 .Involvements{
                     width:80%;
-                    left:1vw;
-                    top:1vw;
+                    left:20px;
+                    top:20px;
                     height:73.8%;
                 }
                 .Involvements p {
