--- a/index.html
+++ b/index.html
@@ -387,7 +387,6 @@
                 .MiniFooter{
                     top:calc(73.8% + 20px);
                     left:20px;
-                    height:26.2%;
                     width:80%;
                 }
                 .Involvements{
@@ -397,10 +396,13 @@
                     height:73.8%;
                 }
                 .Involvements p {
-                    font-size: 12px;
+                    font-size: 13px;
                 }
                 .Involvements ul {
-                    font-size: 9px;
+                    font-size: 10px;
+                }
+                .Involvements p, .Involvements ul, .Involvements li {
+                    margin:8px !important;
                 }
             }
         </style>
