--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
                     height: 250px;
                     float:left;
                     clear:both;
-                    margin-left: 10%;
+                    margin-left: 10% !important;
                     margin-bottom:8px;
                 }
                 .TransparencyGradients{
