--- a/index.html
+++ b/index.html
@@ -383,6 +383,7 @@
                 }
                 .TransparencyGradients{
                     display:none;
+                    left:0;
                 }
                 .MiniFooter{
                     top:calc(73.8% + 20px);
