--- a/index.html
+++ b/index.html
@@ -355,20 +355,19 @@
             }
             #CurrentInitiatives {
                 position:absolute;
-                top:1655px;
+                top:1745px;
                 font-size: clamp(1.97rem, 3.8vw, 7.4rem);
                 font-family: Comfortaa;
-                left: 5%;
+                left:15%;
+                line-height:1.32;
                 color:white;
             }
             #InProgress{
+                position:absolute;
                 font-size: clamp(1.2rem, 2.9vw, 7rem);
                 font-family:Montserrat;
-                position: relative;
-                float: left;
-                margin-top:9%;
-                margin-left:35%;
-                margin-bottom:-9%;
+                top:1745px;   
+                left:45%;
                 font-weight:bold;
                 display: inline-block;
             }
@@ -380,7 +379,7 @@
                 margin:0;
                 margin-top:3px;
                 left:40%;
-                top:3%;
+                top:4%;
                 line-height:1.5;
                 display: inline-block;
             }
