--- a/index.html
+++ b/index.html
@@ -378,8 +378,9 @@
                 float: left;
                 margin:0;
                 margin-top:3px;
-                left:40%;
-                top:4%;
+                left:48.5%;
+                top:6%;
+                list-style-type:circle;
                 line-height:1.5;
                 display: inline-block;
             }
@@ -446,7 +447,7 @@
                     width: 97%;
                 }
                 .Mission{
-                    top: 1.7%;
+                    top: 3.7%;
                     padding: 0.4%;
                     line-height:1.1;
                     mragin-bottom:-4%;
