--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
                 margin:0;
                 margin-top:3px;
                 left:48.5%;
-                top:6%;
+                top: 1805px;
                 list-style-type:circle;
                 line-height:1.5;
                 display: inline-block;
