--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 font-size: clamp(0.8rem, 1.4vw, 4.5rem);
                 line-height:1.37;
                 text-align: left;
-                margin-bottom: 10%;
+                margin-bottom: 7%;
                 z-index: 2;
             }
             .MissionStatement{
@@ -450,7 +450,6 @@
                     top: 3.7%;
                     padding: 0.4%;
                     line-height:1.1;
-                    mragin-bottom:-4%;
                 }
                 .GreenElements, .Goggles{
                     top:0;
@@ -465,6 +464,8 @@
                     border: 8px solid #000000;
                 }
                 .rectangle{
+                    margin-top:20px;
+                    margin-bottom:20px;
                     top: 20px;
                 }
             }
