--- a/index.html
+++ b/index.html
@@ -326,10 +326,10 @@
                 padding-left: 5px;
             }
             .Involvements p {
-                font-size: 40px;
+                font-size: 20vw;
             }
             .Involvements ul {
-                font-size: 30px;
+                font-size: 15vw;
             }
             .TransparencyGradients{
                 background: rgb(0,0,0);
@@ -428,13 +428,13 @@
                     left:20px;
                     top:20px;
                     height:73.8%;
-                }
+                }/*
                 .Involvements p {
                     font-size: 15px;
                 }
                 .Involvements ul {
                     font-size: 12px;
-                }
+                }*/
                 .Involvements p, .Involvements ul, .Involvements li {
                     margin:8px !important;
                 }
