--- a/index.html
+++ b/index.html
@@ -326,10 +326,10 @@
                 padding-left: 5px;
             }
             .Involvements p {
-                font-size: 1.85vw;
+                font-size: 1.9vw;
             }
             .Involvements ul {
-                font-size: 1.35vw;
+                font-size: 1.4vw;
             }
             .TransparencyGradients{
                 background: rgb(0,0,0);
@@ -344,7 +344,7 @@
                 z-index: 4;
             }
             .MiniFooter{
-                top:83.4%;
+                top:83.8%;
                 height:10%;
                 width:15.8vw;
                 left:1.5vw;
@@ -361,28 +361,30 @@
                 left:15%;
                 line-height:1.32;
                 color:white;
+                z-index: 3;
             }
             #InProgress{
                 position:absolute;
-                font-size: clamp(1.2rem, 2.9vw, 7rem);
+                font-size: clamp(1.2rem, 2.4vw, 7rem);
                 font-family:Montserrat;
-                top:1745px;   
+                top:145vw;   
                 left:45%;
                 font-weight:bold;
                 display: inline-block;
+                z-index: 3;
             }
             #Initiatives {
-                font-size: clamp(1rem, 2.4vw, 6.7rem);
+                font-size: clamp(0.9rem, 1.8vw, 6.7rem);
                 font-family:Montserrat;
-                position: relative;
+                position: absolute;
                 float: left;
                 margin:0;
-                margin-top:3px;
                 left:48.5%;
-                top: 1805px;
+                top: 153vw;
                 list-style-type:circle;
                 line-height:1.5;
                 display: inline-block;
+                z-index: 3;
             }
             @media screen and (min-width: 921px) {
                 .LinksMenu, .icon {
@@ -392,7 +394,7 @@
                     flex-direction: row;
                 }
             }
-            @media screen and (max-width: 1140px) { 
+            @media screen and (max-width: 1230px) { 
                 .image-row{
                     top: 0.05%;
                     flex-direction: column;
