--- a/index.html
+++ b/index.html
@@ -254,7 +254,6 @@
             }
             .GreenElements{
                 position: relative;
-                top:2%;
                 margin-bottom:0.2%;
             }
             .TallBird{
@@ -267,7 +266,7 @@
                 width:16vw;
             }
             .Goggles{
-                top:1.5%;
+                top:-0.5%;
                 left:37%;
                 width:20vw;
                 clear:both;
@@ -355,7 +354,8 @@
             }
             #CurrentInitiatives {
                 position:absolute;
-                top:1745px;
+                top:145vw;
+                min-top
                 font-size: clamp(1.97rem, 3.8vw, 7.4rem);
                 font-family: Comfortaa;
                 left:15%;
@@ -394,7 +394,7 @@
                     flex-direction: row;
                 }
             }
-            @media screen and (max-width: 1230px) { 
+            @media screen and (max-width: 1100px) { 
                 .image-row{
                     top: 0.05%;
                     flex-direction: column;
@@ -407,7 +407,7 @@
                     float:left;
                     clear:both;
                     margin-left: 10% !important;
-                    margin-bottom:35px;
+                    margin-bottom:15px;
                     left:0;
                 }
                 .TransparencyGradients{
@@ -444,6 +444,15 @@
                     margin-top:60px;
                     margin-bottom:20px;
                     top: 20px;
+                }
+                #CurrentInitiatives{
+                    top:1700px;
+                }
+                #InProgress{
+                    top:1760px;
+                }
+                #Initiatives{
+                    top:1860px;
                 }
             }       
             @media screen and (max-width: 920px) { 
