--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
             .TransparentBoxes{
                 background-color:rgba(220,220,220,0.2);
                 color: #fff;
-                height: 600px;
+                height: 43vh;
                 width: 24vw;
                 position: relative;
                 margin-top: 0.1%;
