--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                     flex-direction: row;
                 }
             }
-            @media screen and (max-width: 1100px) { 
+            @media screen and (max-width: 1148px) { 
                 .image-row{
                     top: 0.05%;
                     flex-direction: column;
@@ -477,6 +477,13 @@
                     margin: 1%;
                     clear: both;
                     border: 8px solid #000000;
+                }
+                #InProgress{
+                    top:1805px;
+                    left:150px;
+                }
+                #Initiatives{
+                    left:150px;
                 }
             }
         </style>
