--- a/index.html
+++ b/index.html
@@ -313,8 +313,8 @@
                 background-color: #f7fff6ff; 
                 font-family: 'Gill Sans MT', sans-serif;
                 color: black;
-                padding-top:-1px;
                 line-height:0.9;
+                text-wrap: pretty;
             }
             .Involvements p a, .Involvements ul a {
                 color: #0097a7 !important;
@@ -322,7 +322,7 @@
             }
             .Involvements p, .Involvements ul, .Involvements li {
                 margin:16px !important;
-                padding-left: 5px;
+                padding-left: 4px;
             }
             .Involvements p {
                 font-size: 1.9vw;
