--- a/index.html
+++ b/index.html
@@ -321,14 +321,14 @@
                 text-decoration: underline !important;
             }
             .Involvements p, .Involvements ul, .Involvements li {
-                margin:16px !important;
+                margin:6px 16px !important;
                 padding-left: 3px;
             }
             .Involvements p {
-                font-size: 1.86vw;
+                font-size: 18px;
             }
             .Involvements ul {
-                font-size: 1.35vw;
+                font-size: 15px;
             }
             .TransparencyGradients{
                 background: rgb(0,0,0);
@@ -354,7 +354,7 @@
             }
             #CurrentInitiatives {
                 position:absolute;
-                top:145vw;
+                top:1700px;
                 font-size: clamp(1.97rem, 3.8vw, 7.4rem);
                 font-family: Comfortaa;
                 left:15%;
@@ -366,7 +366,7 @@
                 position:absolute;
                 font-size: clamp(1.2rem, 2.4vw, 7rem);
                 font-family:Montserrat;
-                top:145vw;   
+                top:1760px;
                 left:45%;
                 font-weight:bold;
                 display: inline-block;
@@ -379,7 +379,7 @@
                 float: left;
                 margin:0;
                 left:48.5%;
-                top: 153vw;
+                top:1860px;
                 list-style-type:circle;
                 line-height:1.5;
                 display: inline-block;
@@ -429,29 +429,11 @@
                     left:20px;
                     top:20px;
                     height:73.8%;
-                }/*
-                .Involvements p {
-                    font-size: 15px;
                 }
-                .Involvements ul {
-                    font-size: 12px;
-                }
-                .Involvements p, .Involvements ul, .Involvements li {
-                    margin:9px !important;
-                }*/
                 .rectangle{
                     margin-top:60px;
                     margin-bottom:20px;
                     top: 20px;
-                }
-                #CurrentInitiatives{
-                    top:1700px;
-                }
-                #InProgress{
-                    top:1760px;
-                }
-                #Initiatives{
-                    top:1860px;
                 }
             }       
             @media screen and (max-width: 920px) { 
