--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
             }
             #CurrentInitiatives {
                 position:absolute;
-                top:1700px;
+                top:146vw;
                 font-size: clamp(1.97rem, 3.8vw, 7.4rem);
                 font-family: Comfortaa;
                 left:15%;
@@ -366,7 +366,7 @@
                 position:absolute;
                 font-size: clamp(1.2rem, 2.4vw, 7rem);
                 font-family:Montserrat;
-                top:1760px;
+                top:150vw;
                 left:45%;
                 font-weight:bold;
                 display: inline-block;
@@ -379,7 +379,7 @@
                 float: left;
                 margin:0;
                 left:48.5%;
-                top:1860px;
+                top:158vw;
                 list-style-type:circle;
                 line-height:1.5;
                 display: inline-block;
